--- a/windows/terminal/settings.json
+++ b/windows/terminal/settings.json
@@ -30,14 +30,27 @@
     "defaultProfile": "{2c4de342-38b7-51cf-b940-2309a097f518}",
     "experimental.rendering.forceFullRepaint": false,
     "experimental.rendering.software": true,
-    "initialCols": 100,
+    "initialCols": 80,
+    "initialRows": 25,
     "profiles": {
         "defaults": {
-            "acrylicOpacity": 0.69999999999999996,
-            "useAcrylic": true,
-            "fontFace": "Fira Code"
+            "acrylicOpacity": 0.80000000000000004,
+            "fontFace": "Fira Code NF",
+            "fontSize": 14,
+            "fontWeight": "bold",
+            "useAcrylic": true
         },
         "list": [
+            {
+                "colorScheme": "Campbell",
+                "fontFace": "Cascadia Mono",
+                "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
+                "hidden": false,
+                "name": "Ubuntu",
+                "source": "Windows.Terminal.Wsl",
+                "tabTitle": "Terminal",
+                "suppressApplicationTitle": true
+            },
             {
                 "commandline": "powershell.exe",
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
@@ -47,20 +60,14 @@
             {
                 "commandline": "cmd.exe",
                 "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-                "hidden": false,
+                "hidden": true,
                 "name": "Command Prompt"
             },
             {
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-                "hidden": false,
+                "hidden": true,
                 "name": "Azure Cloud Shell",
                 "source": "Windows.Terminal.Azure"
-            },
-            {
-                "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
-                "hidden": false,
-                "name": "Ubuntu",
-                "source": "Windows.Terminal.Wsl"
             }
         ]
     },
