throttlestop: update interface

--- a/windows/ThrottleStop.ini
+++ b/windows/ThrottleStop.ini
@@ -1,11 +1,11 @@
 [ThrottleStop]
 StartFailed=0
-FileName=C:\Users\raihan\Documents\ThrottleStop\ThrottleStop.ini
-GUID0={5E5A9D67-AFFC-4E7B-99FD-1D3836A1318A}
-GUID1={B1BCE8D2-3DC1-432D-A803-B81FAAE5029A}
-GUID2={786CA844-947E-4335-9AF3-D4969B0FA895}
-GUID3={596C12AB-9359-4CC7-80DB-341FA67048CD}
-GUID4={F0672137-D3E0-4490-B89A-2BF82928C0B2}
+FileName=C:\Users\Raihan\Documents\ThottleStop\ThrottleStop.ini
+GUID0={B7727C49-36BC-454F-A019-CFAC49A837B2}
+GUID1={40B5A24B-E0E6-4E68-A2A3-CC9BF3709F28}
+GUID2={6B4A9FCB-0CAB-4CCF-9CE1-C11CBD62121D}
+GUID3={C5AEE6DC-3A05-4DBF-A175-316DA43E5A1E}
+GUID4={05F532AD-7F07-4C32-A183-5B677B123372}
 DTSAlarm=1
 GPUAlarm=105
 LowBattPercent=0
@@ -29,7 +29,7 @@ DutyCycle3=16
 DutyCycle4=16
 EIST=15
 DTSButton=0
-ColorIndex=2
+ColorIndex=0
 CPUColor=0xFFFFFF
 GPUColor=0xFFFFFF
 CPUMHzColor=0xFFFFFF
@@ -265,3 +265,14 @@ IccMaxNew43=0x0000002C
 TVBoost=0xF
 VMaxStress=0xF
 HeadingView=0
+NAQuality=6
+NAHeight=-15
+NAWeight=400
+NAItalic=0
+NAFaceName=Segoe UI
+MFHeight=-13
+MFWeight=600
+MFItalic=0
+MFQuality=6
+MFFaceName=Segoe UI Semibold
+
