--- a/config/i3/config
+++ b/config/i3/config
@@ -4,6 +4,7 @@
 focus_follows_mouse no
 exec_always --no-startup-id nitrogen --restore
 exec_always --no-startup-id picom
+exec --no-startup-id dunst
 
 default_border pixel 2
 gaps inner 5
@@ -30,7 +31,7 @@ set $right l
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 8
-font pango:DejaVu Sans Mono 8
+font pango:FiraCode Nerd Font 8
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
