--- a/config/i3/config
+++ b/config/i3/config
@@ -1,26 +1,39 @@
 # Raihan's config for i3
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
+
+# ========= Initial ==========
 
 focus_follows_mouse no
 exec_always --no-startup-id nitrogen --restore
 exec_always --no-startup-id picom
+exec_always --no-startup-id udiskie &
 exec --no-startup-id dunst
+#exec --no-startup-id nm-applet
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+set $refresh_i3status killall -SIGUSR1 i3status
 
+# ========== Border / Gaps ==========
+ 
 default_border pixel 2
 gaps inner 5
 
-# Colors
-set $cl_high #FFFFFF
+# ========== Colors ==========
+
+set $cl_high #006660
 set $cl_indi #d9d8d8
-set $cl_back #231f20
-set $cl_fore #d9d8d8
+set $cl_back #011211
+set $cl_fore #ADD8E6
 set $cl_urge #ee2e24
 
-# Colors                border   bg       text     indi     childborder
-client.focused          $cl_indi $cl_high $cl_back $cl_indi $cl_high
+#sections               border   backgr   text     indi     childborder
+client.focused          $cl_high $cl_back $cl_high $cl_high $cl_high
 client.focused_inactive $cl_back $cl_back $cl_fore $cl_back $cl_back
 client.unfocused        $cl_back $cl_back $cl_fore $cl_back $cl_back
 client.urgent           $cl_urge $cl_urge $cl_fore $cl_urge $cl_urge
+
+
+# ========== Navigating ==========
 
 set $mod Mod1
 
@@ -28,118 +41,86 @@ set $left h
 set $down j
 set $up k
 set $right l
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
+
+# ========== Fonts ==========
 #font pango:monospace 8
-font pango:FiraCode Nerd Font 8
+font pango: CaskaydiaCove NF 10
 
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
 
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# ========== Binding ==========
 
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
-
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-#bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-#bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
-bindsym XF86AudioRaiseVolume exec ~/.dotfiles/scripts/volume.sh up 
-bindsym XF86AudioLowerVolume exec ~/.dotfiles/scripts/volume.sh down                                                                  
-bindsym XF86AudioMute exec ~/.dotfiles/scripts/volume.sh mute      
-bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE @ toggle                                                           
-bindsym XF86MonBrightnessUp exec ~/.dotfiles/scripts/backlight.sh up                                                                  
-bindsym XF86MonBrightnessDown exec ~/.dotfiles/scripts/backlight.sh down
-
-bindsym Print exec flameshot gui
-
-# Use Mouse+$mod to drag floating windows to their wanted position
+# Audio
+bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.dotfiles/scripts/volume.sh up
+bindsym XF86AudioLowerVolume exec --no-startup-id ~/.dotfiles/scripts/volume.sh down
+bindsym XF86AudioMute exec --no-startup-id ~/.dotfiles/scripts/volume.sh mute
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE @ toggle
+# Brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id ~/.dotfiles/scripts/backlight.sh up
+bindsym XF86MonBrightnessDown exec --no-startup-id ~/.dotfiles/scripts/backlight.sh down
+# Screenshot
+bindsym Print exec --no-startup-id flameshot gui
+# Floating Modifier to Move Window
 floating_modifier $mod
-
-# start a terminal
+# Terminal
 bindsym $mod+Return exec kitty
-
-# kill focused window
+# Kill Window
 bindsym $mod+Shift+q kill
-
-# start dmenu (a program launcher)
+# Program Launcher / Menu
 #bindsym $mod+d exec --no-startup-id dmenu_run
 bindsym $mod+d exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
-
-# change focus
+# Change Focus
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
 bindsym $mod+$up focus up
 bindsym $mod+$right focus right
-
-# alternatively, you can use the cursor keys:
+# Change Focus but with arrow keys
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-
-# move focused window
+# Move Focused Window
 bindsym $mod+Shift+$left move left
 bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
-
-# alternatively, you can use the cursor keys:
+# Move Focused Window but with arrow keys
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-
-# split in horizontal orientation
+# Split Horizontal
 bindsym $mod+b split h
-
-# split in vertical orientation
+# Split Vertical
 bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
+# Enter Fullscreen
 bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
+# Change Container Layout
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
+# Toggle Floating
 bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
+# Toggle Focus between Tiling or Floating
 bindsym $mod+space focus mode_toggle
-
-# focus the parent container
+# Focus to parent container
 bindsym $mod+a focus parent
-
-# focus the child container
+# Focus to child container
 #bindsym $mod+d focus child
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+# ========== Workspace ==========
+set $ws1 "1:I"
+set $ws2 "2:II"
+set $ws3 "3:III"
+set $ws4 "4:IV"
+set $ws5 "5:V"
+set $ws6 "6:VI"
+set $ws7 "7:VII"
+set $ws8 "8:VIII"
+set $ws9 "9:IX"
+set $ws10 "10:X"
 
-# switch to workspace
+# Switch to Workspaces
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -151,7 +132,7 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
-# move focused container to workspace
+# Move Focused Container to Workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -163,14 +144,16 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# reload the configuration file
+# ========== Config ==========
+# Reload the configuration file
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+# Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
+# Exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
+# ========== Resizing ==========
+# Resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
@@ -197,17 +180,50 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# ========== i3's Bar ==========
+
 #bar {
 #        status_command i3status
 #}
+
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
+# ========== App's Workspace ==========
 
-# android studio
-for_window [class="android-studio"] floating enable
-# broswer pop-ups
+# ===== workspace 1 ( terminal )=====
+#
+# well idk
+#
+# ===== workspace 2 ( browser )=====
+
+# // firefox
+for_window [class="firefox"] move to workspace $ws2
+
+# // browser pop-ups
 for_window [window_role="pop-up"] floating enable
+
+# ===== workspace 3 ( development )=====
+
+# // android studio
+for_window [class="jetbrains-studio" title="^win\d+$"] focus
+for_window [class="jetbrains-studio"] move to workspace $ws3
+
+# // code
+for_window [class="(?i)code"] move to workspace $ws3
+
+# ===== workspace 4 =====
+
+# discord
+for_window [class="discord"] move to workspace $ws4
+
+# spotify
+for_window [class="(?i)spotify"] move to workspace $ws4
+
+# ===== workspace 5 =====
 # zoom
+
 for_window [class="zoom"] floating enable
+for_window [class="zoom"] move to workspace $ws5
+
+# ===== workspace 6 and so on =====
+#
