kitty: change font and colorscheme

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,46 +1,32 @@
 background_opacity 0.9
-font_family FiraCode NF
+font_family CaskaydiaCove NF
 window_padding_width 8
-font_size 12
-# gruvbox-dark colorscheme for kitty
-# snazzy theme used as base
+font_size 14
 
-foreground            #ebdbb2
-background            #272727
-selection_foreground  #655b53
-selection_background  #ebdbb2
-url_color             #d65c0d
+foreground #a9b1d6
+background #011211
+cursor #a9b1d6
 
-# black
-color0   #272727
-color8   #928373
+color0 #1a1b26
+color8 #4e5173
 
-# red
-color1   #cc231c
-color9   #fb4833
+color1 #F7768E
+color9 #F7768E
 
-# green
-color2   #989719
-color10  #b8ba25
+color2 #9ECE6A
+color10 #9ECE6A
 
-# yellow
-color3   #d79920
-color11  #fabc2e
+color3 #E0AF68
+color11 #E0AF68
 
-# blue
-color4  #448488
-color12 #83a597
+color4 #7AA2F7
+color12 #7AA2F7
 
-# magenta
-color5   #b16185
-color13  #d3859a
+color5 #9a7ecc
+color13 #9a7ecc
 
-# cyan
-color6   #689d69
-color14  #8ec07b
+color6 #4abaaf
+color14 #4abaaf
 
-# white
-color7   #a89983
-color15  #ebdbb2
-
-
+color7 #acb0d0
+color15 #acb0d0
