--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,5 +1,7 @@
+/* raihan's picom config */
+
 backend = "glx";
-glx-use-copysubbuffer-mesa = false;
+glx-use-copysubbuffer-mesa = true;
 
 /*shadow = true;*/
 shadow-radius = 13;
@@ -8,15 +10,20 @@ shadow-offset-y = 3;
 shadow-opacity = 0.3;
 shadow-ignore-shaped = false;
 
-inactive-opacity = 1;
+inactive-opacity = 0.9;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = true;
 
+opacity-rule = [ "100:class_g = 'steam'" ];
+opacity-rule = [ "100:class_g = 'Steam'" ];
+
 fading = true;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
-fade-delta = 4;
+fade-in-step = 0.02;
+fade-out-step = 0.02;
+fade-delta = 2;
 no-fading-destroyed-argb = true;
 
 vsync = true;
+corner-radius = 5;
+
