picom: MAKE IT LIGHTERRR!!!

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,29 +1,40 @@
 /* raihan's picom config */
 
+/*glx backend is faster*/
+
 backend = "glx";
 glx-use-copysubbuffer-mesa = true;
 
-/*shadow = true;*/
-shadow-radius = 13;
-shadow-offset-x = 3;
-shadow-offset-y = 3;
-shadow-opacity = 0.3;
-shadow-ignore-shaped = false;
-
-inactive-opacity = 0.9;
-active-opacity = 1;
-frame-opacity = 1;
-inactive-opacity-override = true;
-
-opacity-rule = [ "100:class_g = 'steam'" ];
-opacity-rule = [ "100:class_g = 'Steam'" ];
-
-fading = true;
-fade-in-step = 0.02;
-fade-out-step = 0.02;
-fade-delta = 2;
-no-fading-destroyed-argb = true;
+/*enable vsync, so there will be no more stutter or whatsoever*/
 
 vsync = true;
 corner-radius = 5;
+
+/*starting from here, below are performance-hogging config*/
+
+/*shadow = true;*/
+/*shadow-radius = 13;*/
+/*shadow-offset-x = 3;*/
+/*shadow-offset-y = 3;*/
+/*shadow-opacity = 0.3;*/
+/*shadow-ignore-shaped = false;*/
+
+/*inactive-opacity = 0.9;*/
+/*active-opacity = 1;*/
+/*frame-opacity = 1;*/
+/*inactive-opacity-override = true;*/
+
+/*opacity-rule = [ "100:class_g = 'steam'" ];*/
+
+/*blur: {*/
+  /*method = "dual_kawase";*/
+  /*strength = 10;*/
+/*};*/
+
+/*fading = true;*/
+/*fade-in-step = 0.02;*/
+/*fade-out-step = 0.02;*/
+/*fade-delta = 2;*/
+/*no-fading-destroyed-argb = true;*/
+
 
