--- a/config/i3/config
+++ b/config/i3/config
@@ -17,7 +17,7 @@ exec --no-startup-id ~/.dotfiles/scripts/udiskie.sh
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-set $refresh_i3status killall -SIGUSR1 i3status
+#set $refresh_i3status killall -SIGUSR1 i3status
 
 # ========== Border / Gaps ==========
  
